--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,20 +51,5 @@ img {
   outline-offset: 2px;
 }
 
-/* Skip to main content link for screen readers */
-.skip-to-main {
-  position: absolute;
-  left: -9999px;
-  z-index: 999;
-  padding: 1em;
-  background-color: var(--primary);
-  color: white;
-  text-decoration: none;
-}
-
-.skip-to-main:focus {
-  left: 50%;
-  transform: translateX(-50%);
-  top: 1em;
-}
+/* Skip to main content link for screen readers - removed as not needed */
 
